AMP-30677: Add missing java class to ant migrated code