@@ -61,6 +61,7 @@ import java.io.IOException;
 import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
 import java.text.MessageFormat;
@@ -68,8 +69,10 @@ import java.text.SimpleDateFormat;
 import java.util.*;
 import java.util.regex.Pattern;
 
+import static net.bull.javamelody.internal.common.Parameters.getServletContext;
+
 public class DgUtil {
-    
+
     private static Logger logger = I18NHelper.getKernelLogger(DgUtil.class);
 
     private static final int FASTSPLIT_MAXSIZE = 2048;
@@ -207,7 +210,7 @@ public class DgUtil {
         }
         session.saveOrUpdate(ampAppSettings);
     }
-    
+
     /**
      *
      * @param language
@@ -224,7 +227,7 @@ public class DgUtil {
         }
 
         Site currentSite = RequestUtils.getSite(request);
-        if (currentSite != null) {            
+        if (currentSite != null) {
             if (getSupportedLanguage(language.getCode(), currentSite,
                                      isLocalTranslatorForSite(request)) == null) {
                 // Language is not supported
@@ -233,7 +236,7 @@ public class DgUtil {
                 DgUtil.setUserLanguage(request, response);
                 return;
             }
-           
+
             saveUserLanguagePreferences(request, language);
             saveWorkspaceLanguagePreferences(request, language);
             request.setAttribute(Constants.NAVIGATION_LANGUAGE, language);
@@ -241,14 +244,14 @@ public class DgUtil {
             setLanguageCookie(language, request, response);
         }
     }
-    
+
     public static void setSessionLanguage(HttpServletRequest request, HttpServletResponse response, Locale language) {
         request.setAttribute(Constants.NAVIGATION_LANGUAGE, language);
         if (request.getSession() != null)
             request.getSession().setAttribute(Constants.NAVIGATION_LANGUAGE, language);
         setLanguageCookie(language, request, response);
     }
-    
+
     private static void setLanguageCookie(Locale language, HttpServletRequest request, HttpServletResponse response) {
         SiteDomain currDomain = RequestUtils.getSiteDomain(request);
         Cookie cookie = new Cookie("digi_language", language.getCode());
@@ -343,19 +346,19 @@ public class DgUtil {
                 }
 
             }
-            
+
             if(request.getParameter("language")!=null){
                 language = getSupportedLanguage(request.getParameter("language"),
                         currentSite,
                         isLocalTranslatorForSite(request));
             }
-            
+
             if (language != null) {
                 logger.debug("Language, determined from request parameter: " +
                              language.getCode());
                 return language;
             }
-            
+
             // Determine language using cookies
             Cookie[] cookies = request.getCookies();
             if (cookies != null) {
@@ -376,7 +379,7 @@ public class DgUtil {
                              language.getCode());
                 return language;
             }
-            
+
             //using session attribute
             if (request.getSession() != null){
                 language = (Locale)request.getSession().getAttribute(Constants.NAVIGATION_LANGUAGE);
@@ -386,7 +389,7 @@ public class DgUtil {
                     return language;
                 }
             }
-                
+
             // Determine list of accepted languages from request
 
             // request.getLocales() contains at least one value: if
@@ -533,8 +536,8 @@ public class DgUtil {
      */
     public static String encodeBase64(String string) {
         try {
-            return URLEncoder.encode(new sun.misc.BASE64Encoder().encodeBuffer(
-                string.getBytes()), "UTF-8");
+            String base64Encoded = Base64.getEncoder().encodeToString(string.getBytes(StandardCharsets.UTF_8));
+            return URLEncoder.encode(base64Encoded, StandardCharsets.UTF_8.name());
         }
         catch (UnsupportedEncodingException ex) {
             logger.error("Could not encode Base64", ex);
@@ -549,7 +552,7 @@ public class DgUtil {
      */
     public static String decodeBase64(String string) {
         try {
-            return new String(Base64.getDecoder().decode(URLDecoder.decode(string, "UTF-8")), "UTF-8");
+            return new String(Base64.getDecoder().decode(URLDecoder.decode(string, "UTF-8")), StandardCharsets.UTF_8);
 
         } catch (UnsupportedEncodingException ex) {
             logger.error("Could not decode Base64", ex);
@@ -719,7 +722,7 @@ public class DgUtil {
         Locale language = DgUtil.getLanguageFromRequest(request);
         logger.debug("Navigation language, determined from request is: " +
                      language == null ? null : language.getCode());
-        
+
        setSessionLanguage(request, response, language);
 
         User user = RequestUtils.getUser(request);
@@ -1785,7 +1788,7 @@ public class DgUtil {
         }
         return retVal;
     }
-    
+
     /**
      * precompile these patterns (a slow process) for some speedup and for copy-paste avoidance
      */
@@ -1798,8 +1801,8 @@ public class DgUtil {
                                     Pattern.compile("StartFragment:[0-9]+"), // no DOTALL needed
                                     Pattern.compile("EndFragment:[0-9]+") // no DOTALL needed
     };
-    
-    
+
+
     private static Set<Character> trimmableChars = new HashSet<Character>() {{add(' '); add('\n'); add('\t');}};
 
     /**
@@ -1827,7 +1830,7 @@ public class DgUtil {
             return "";
         return src.substring(begPos, endPos + 1);
     }
-    
+
     /**
      * cleans a text copy-pasted from Word from all of its tags and returns the plain text
      * also does sanity cleanups, like replacing tabs with spaces and multiple spaces with a single one
@@ -1858,5 +1861,14 @@ public class DgUtil {
         String noTags = Jsoup.clean(content, Safelist.none());
         String noNbsp = noTags.replace("&nbsp;", " ");
         return StringUtils.normalizeSpace(StringEscapeUtils.unescapeHtml4(noNbsp));
+    }
+    public static String getWebInfPath(String path){
+        path=path.replace("/","");
+        return "/src/main/webapp/WEB-INF/"+path;
+    }
+    public static String getWebInfPathWithContext(String path){
+        path=path.replace("/","");
+        return getServletContext().getRealPath("/WEB-INF/"+path);
+
     }
 }
